--- a/responsive-img/index.html
+++ b/responsive-img/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Img responsive </title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -12,7 +13,13 @@
   <h1>Responsive</h1>
 
 
-  <div class="container"></div>
+  <div class="container">
+
+    <img class="fluid"
+      srcset="images/mobile-400.jpg 600w, images/tablet-640.jpg 1200w, images/large-1920.jpg 2000w, images\full-size-4000.jpg 3000w"
+      src="images/large-1920.jpg" alt="image">
+
+  </div>
 
 
 </body>
