--- a/bootstrap-intro/index.html
+++ b/bootstrap-intro/index.html
@@ -13,8 +13,8 @@
 
 <body class="bg-light">
   <!-- bs nav -->
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
+  <nav class="navbar navbar-expand-sm bg-body-tertiary">
+    <div class="container">
       <a class="navbar-brand" href="#">MyLogo</a>
       <!-- burger -->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
@@ -22,7 +22,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <!-- /burger  -->
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-link active" aria-current="page" href="#">Home</a>
           <a class="nav-link" href="#">Features</a>
@@ -41,6 +41,35 @@
     <p class="lead fs-3 border border-2 d-inline-block px-5 py-2">This is it</p>
     <button class="btn btn-primary">Click me</button>
     <button class="btn btn-outline-danger">Click me danger</button>
+
+    <hr>
+    <div class="articles d-md-flex gap-2">
+      <article class="border border-success bg-dark-subtle p-3">
+        <h2 class="text-primary">Title 1</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, expedita.</p>
+      </article>
+      <article class="border border-success bg-dark-subtle p-3">
+        <h2 class="text-primary">Title 2</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, expedita.</p>
+      </article>
+      <article class="border border-success bg-dark-subtle p-3 d-md-none">
+        <h2 class="text-primary">Title 3</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, expedita.</p>
+      </article>
+    </div>
+
+    <!-- pvz   -->
+    <div class="container text-center pt-3">
+      <div class="row">
+        <div class="bg-danger-subtle col-sm-8">col-sm-8</div>
+        <div class="bg-danger-subtle col-sm-4">col-sm-4</div>
+      </div>
+      <div class="row">
+        <div class="bg-danger-subtle col-sm">col-sm</div>
+        <div class="bg-danger-subtle col-sm">col-sm</div>
+        <div class="bg-danger-subtle col-sm">col-sm</div>
+      </div>
+    </div>
   </div>
 
 
