--- a/bootstrap-intro/index.html
+++ b/bootstrap-intro/index.html
@@ -72,6 +72,12 @@
     </div>
   </div>
 
+  <div class="d-grid text-center">
+    <div class="g-col-6">.g-col-4</div>
+    <div class="g-col-4">.g-col-4</div>
+    <div class="g-col-4">.g-col-4</div>
+  </div>
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
